Layout bug fixed

--- a/layout.css
+++ b/layout.css
@@ -49,7 +49,7 @@ h2 {
 }
 
 h3 {
-	font-size: 1.8rem;
+	font-size: 1.6rem;
 	color: #e0e0e0;
 	text-shadow: 0 0 8px #ff6f00, 0 0 15px #ff9100;
 }
